show under construction alert for 'events', 'alumni' menu.

--- a/app/views/partials/body/drawer.hbs
+++ b/app/views/partials/body/drawer.hbs
@@ -18,8 +18,8 @@
       <li role="presentation" class="active"><a href="/">Home</a></li>
       <li role="presentation"><a href="/bootcamp">Bootcamp</a></li>
       <li role="presentation"><a href="/precourse">Pre-Course</a></li>
-      <li role="presentation"><a href="/events">Events</a></li>
-      <li role="presentation"><a href="/alumni">Alumni</a></li>
+      <li role="presentation"><a href="/events" class="under-construction">Events</a></li>
+      <li role="presentation"><a href="/alumni" class="under-construction">Alumni</a></li>
       <li role="presentation"><a href="#instructor">Team</a></li>
       <li role="presentation"><a href="#contacts">Contacts</a></li>
     </ul>
