--- a/app/views/partials/body/menu.hbs
+++ b/app/views/partials/body/menu.hbs
@@ -28,12 +28,12 @@
         </a>
       </span>
       <span class="col-md-3">
-        <a href="/events">
+        <a href="/events" class="under-construction">
           Events
         </a>
       </span>
       <span class="col-md-3">
-        <a href="/alumni">
+        <a href="/alumni" class="under-construction">
           Alumni
         </a>
       </span>
