--- a/app/views/partials/head/common.hbs
+++ b/app/views/partials/head/common.hbs
@@ -31,5 +31,6 @@
 <!--[if !IE]><!-->
 <script src="/components/bootstrap-drawer/dist/js/drawer.min.js"></script>
 <!--<![endif]-->
+<script src="/components/bootstrap-validator/dist/validator.min.js"></script>
 <script src="/js/common.js"></script>
 <link rel="stylesheet" type="text/css" href="/css/common.css" />
