--- a/app/views/partials/head/common.hbs
+++ b/app/views/partials/head/common.hbs
@@ -32,5 +32,6 @@
 <script src="/components/bootstrap-drawer/dist/js/drawer.min.js"></script>
 <!--<![endif]-->
 <script src="/components/bootstrap-validator/dist/validator.min.js"></script>
+<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 <script src="/js/common.js"></script>
 <link rel="stylesheet" type="text/css" href="/css/common.css" />
