--- a/app/views/partials/body/menu.hbs
+++ b/app/views/partials/body/menu.hbs
@@ -34,7 +34,7 @@
       </span>
       <span class="col-md-3">
         <a href="/alumni" class="under-construction">
-          Alumni
+          News
         </a>
       </span>
     </div>
