--- a/app/views/home.hbs
+++ b/app/views/home.hbs
@@ -90,7 +90,7 @@
   }
   .service ul {
     list-style-type: none;
-    min-height: 200px;
+    min-height: 300px;
   }
   .service li {
     line-height: 2em;
@@ -170,7 +170,7 @@
       <img src="img/logo2.png">
     </figure>
     <h1><b>Meet Your Data Science Expert</b></h1>
-    <h3>Headstart는 Data Science에 관한 당신의 커리어 성장을 도울 최적의 프로그램을 제공합니다. 지금, 미래를 바꾸세요.</h3>
+    <h3>Headstart는 독자적인 Project 중심으로 커리큘럼을 구성하였습니다.<br/>Data Science를 스스로 익히고 수행 할 수 있습니다. 초보자 과정 부터 고급 과정까지 Bootcamp 안에 담아 운영하는 Data Science 전문 연수 기관입니다.</h3>
   </section>
 </header>
 <main>
@@ -178,34 +178,41 @@
   <article class="catchphrase dark">
     <div class="container">
       <h1>헤드스타트는 한국 <b>데이터사이언스</b> 교육의 <b>기준</b>입니다.</h1>
-      <h3>Headstart is standard of Data science in Korea.</h3>
+      <h3>Headstart has been a standard of Data Science Institution in Korea.</h3>
     </div>
   </article>
   <!-- CUSTOMER -->
   <article class="customer light">
     <div class="container">
-      <h1>당신만을 위한 <b>커리큘럼을</b> 제공합니다.</h1>
+      <h2>Headstart 만의 독자적인 <b>커리큘럼</b>을 제공합니다.</h2>
       <div class="row">
-        <section class="col-md-4">
+        <section class="col-md-3">
           <figure>
             <img src="img/info1.png"/>
           </figure>
-          <h2>학생</h2>
-          <span>Headstart는 미국IT 기업의 업무진행방식을 직접 경험할 수 있는 Project를 통한 실습 및 인턴쉽을 제공하며 현장실습교과목을 통한 학점인정이 가능합니다. Headstart는 실제 업무에 사용되는 프로그래밍 역량을 강화하고 취업에 필요한 데이터 포트폴리오를 완성하여 취업까지 이어질 수 있도록 지원해 드립니다.</span>
+          <h4>현직 실리콘 밸리 Data Scientist 참여</h4>
+          <span>현재 실리콘 밸리에서 근무중인 Data Scientist 가 최근 trend와 적용사례들을 반영한 Curriculum 진행</span>
         </section>
-        <section class="col-md-4">
+        <section class="col-md-3">
           <figure>
             <img src="img/info2.png"/>
           </figure>
-          <h2>일반인</h2>
-          <span>현업에서 업무역량을 키우고 싶으신 분, 데이터분석가로 커리어 전환하고 싶으신 분, 효율적인 데이터 분석과 실무적용을 위해 Data Science에 대한 Project를 진행합니다. Data Scientist로의 지름길을 찾아 가는데 Headstart 가 함께하겠습니다.</span>
+          <h4>넓은 수강생 스펙트럼</h4>
+          <span>다양한 관점에서 데이터를 분석하는 초보자과정 부터, 데이터 분석 방법과 심화 분석 결과를 실전에 응용할 수 있는 심화과정 운영</span>
         </section>
-        <section class="col-md-4">
+        <section class="col-md-3">
           <figure>
             <img src="img/info3.png"/>
           </figure>
-          <h2>기업</h2>
-          <span>Headstart는 실제 미국 IT기업이 데이터를 분석하는 방법과 데이터 활용사례를 기반으로 차별화된 Data Science 관련 사내 교육을 진행합니다. 무수한 데이터 속 올바른 결정을 내리기 힘든 경우, HEADSTART와의 아웃소싱을 통해 최상의 결과를 만들어보십시오.</span>
+          <h4>실무 지향 프로그램</h4>
+          <span>현재 진행하는 업무와 유사한 Project 를 수행하여 빠르게 본업에 적용</span>
+        </section>
+        <section class="col-md-3">
+          <figure>
+            <img src="img/info3.png"/>
+          </figure>
+          <h4>전문가의 노하우</h4>
+          <span>Project 를 통해 실전 능력을 기르고, 전문가의 분석 방법과 노하우를 통하여 통찰력을 기를 수 있는 System 운영</span>
         </section>
       </div>
     </div>
@@ -218,43 +225,44 @@
   <article class="service dark row">
     <section class="col-md-4 right-border">
       <hr />
-      <h3>BOOTCAMP</h3>
+      <h3>Bootcamp</h3>
       <span>
         <ul>
-          <li>Short Term Intensive Camp</li>
-          <li>기초 통계, 데이터 수집, 데이터 분석, 데이터 시각화</li>
-          <li>정형화 모델 형성</li>
-          <li>Whiteboarding 을 통한 문제 해결 능력 향상</li>
-          <li>실리콘 밸리 전문가와의 네트워킹</li>
+          <li>현직 전문가가 직접 기획한 Projects</li>
+          <li>직장인은 Project 수행 후 바로 현재 업무에 적용가능</li>
+          <li>기초코딩부터 결과 시각화까지 다양한 교육범위</li>
+          <li>전문가의 노하우를 Project 실습을 통해 습득</li>
+          <li>미국 현지 Data Scientist Job 채용조건과 매칭</li>
+          <li>단기집중 코스 및 장기교육 프로그램</li>
+          <li>미국 현지진행 프로그램 참여시, 현지 Network 구축</li>
         </ul>
       </span>
       <button class="btn btn-default">MORE</button>
     </section>
     <section class="col-md-4 right-border">
       <hr />
-      <h3>PROJECT</h3>
+      <h3>Pre-Course</h3>
       <span>
         <ul>
-          <li>현직 전문가의 Project Managing</li>
-          <li>전달식 강의를 벗어난 실전 Project 참여</li>
-          <li>미국 IT 기업 업무 Process 적용</li>
-          <li>Project 결과 Portfolio 제작</li>
-          <li>수준별 Project 참여</li>
-          <li>Expert Level 기업 Project 참여</li>
+          <li>다양한 self-study 컨텐츠로 구성</li>
+          <li>스스로 부족한 부분을 확인 후 선택학습</li>
+          <li>기초 통계분석 레벨</li>
+          <li>R programming 과제 제공</li>
+          <li>On-line contact를 통한 개별지도 가능</li>
         </ul>
       </span>
       <button class="btn btn-default">MORE</button>
     </section>
     <section class="col-md-4">
       <hr />
-      <h3>ONLINE</h3>
+      <h3>History & News</h3>
       <span>
         <ul>
-          <li>E-mail 을 통한 매일 학습 가능</li>
-          <li>엄선된 Data Structure, Algorithm 문제 제공</li>
-          <li>Data Science 기초 , 실전 Level 학습 제공</li>
-          <li>R, Phython, SQL 학습</li>
-          <li>현직 전문가와의 질의 응답</li>
+          <li>Data Science 관련 직종정보와 업계현황 공유</li>
+          <li>Project Portfolio 결과 공유</li>
+          <li>Headstart 프로그램 소개와 활동 공유</li>
+          <li>Data Science 관련 기사와 소식 공유</li>
+          <li>미국 현지 업계의 Data Science 활용 공유</li>
         </ul>
       </span>
       <button class="btn btn-default">MORE</button>
@@ -265,15 +273,15 @@
     <h1 class="left">INSTRUCTOR</h1>
     <div class="row">
       <figure class="col-md-3">
-        <img class="circle" src="img/instructor-01.png" />
+        <img class="circle" src="/img/instructor-01.png" />
         <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="statkwon"><a class="LI-simple-link" href='https://www.linkedin.com/in/statkwon?trk=profile-badge'>Jaimyoung (Jaimie) Kwon</a></div>
       </figure>
       <figure class="col-md-3">
-        <img class="circle" src="img/instructor-02.png" />
+        <img class="circle" src="/img/instructor-02.png" />
         <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="jerrid-matthews-609a682"><a class="LI-simple-link" href='https://www.linkedin.com/in/jerrid-matthews-609a682?trk=profile-badge'>Jerrid Matthews</a></div>
       </figure>
       <figure class="col-md-3">
-        <img class="circle" src="img/instructor-03.png" />
+        <img class="circle" src="/img/instructor-03.png" />
       </figure>
       <figure class="col-md-3">
         <span class="circle"></span>
