center linked in profile.

--- a/app/views/home.hbs
+++ b/app/views/home.hbs
@@ -123,8 +123,10 @@
     display: none;
     position: absolute;
     background-color: #ffffff;
-    left: -20px;
-    top: -20px;
+    left: 50%;
+    margin-left: -140px;
+    top: 50%;
+    margin-top: -105px;
   }
   .instructor figure > div:hover {
     display: block;
