--- a/app/views/home.hbs
+++ b/app/views/home.hbs
@@ -190,28 +190,28 @@
       <div class="row">
         <section class="col-md-3">
           <figure>
-            <img src="img/info1.png"/>
+            <img src="/img/curriculum-1.png"/>
           </figure>
           <h4>현직 실리콘 밸리 Data Scientist 참여</h4>
           <span>현재 실리콘 밸리에서 근무중인 Data Scientist 가 최근 trend와 적용사례들을 반영한 Curriculum 진행</span>
         </section>
         <section class="col-md-3">
           <figure>
-            <img src="img/info2.png"/>
+            <img src="/img/curriculum-2.png"/>
           </figure>
           <h4>넓은 수강생 스펙트럼</h4>
           <span>다양한 관점에서 데이터를 분석하는 초보자과정 부터, 데이터 분석 방법과 심화 분석 결과를 실전에 응용할 수 있는 심화과정 운영</span>
         </section>
         <section class="col-md-3">
           <figure>
-            <img src="img/info3.png"/>
+            <img src="/img/curriculum-3.png"/>
           </figure>
           <h4>실무 지향 프로그램</h4>
           <span>현재 진행하는 업무와 유사한 Project 를 수행하여 빠르게 본업에 적용</span>
         </section>
         <section class="col-md-3">
           <figure>
-            <img src="img/info3.png"/>
+            <img src="/img/curriculum-4.png"/>
           </figure>
           <h4>전문가의 노하우</h4>
           <span>Project 를 통해 실전 능력을 기르고, 전문가의 분석 방법과 노하우를 통하여 통찰력을 기를 수 있는 System 운영</span>
