news to blog which links to Facebook page.

--- a/app/views/partials/body/drawer.hbs
+++ b/app/views/partials/body/drawer.hbs
@@ -19,7 +19,7 @@
       <li role="presentation"><a href="/bootcamp">Bootcamp</a></li>
       <li role="presentation"><a href="/precourse">Pre-Course</a></li>
       <li role="presentation"><a href="/events" class="under-construction">Events</a></li>
-      <li role="presentation"><a href="/alumni" class="under-construction">News</a></li>
+      <li role="presentation"><a href="https://www.facebook.com/headstartsv">Blog</a></li>
       <li role="presentation"><a href="#instructor">Team</a></li>
       <li role="presentation"><a href="#contacts">Contacts</a></li>
     </ul>
