--- a/app/views/partials/body/menu.hbs
+++ b/app/views/partials/body/menu.hbs
@@ -33,8 +33,8 @@
         </a>
       </span>
       <span class="col-md-3">
-        <a href="/alumni" class="under-construction">
-          News
+        <a href="https://www.facebook.com/headstartsv">
+          Blog
         </a>
       </span>
     </div>
